script/sparta-test-55490.err
src/general/nvbs_utilities.cpp: In function 'int matprint(const ncVBS&)':
src/general/nvbs_utilities.cpp:97:1: warning: no return statement in function returning non-void [-Wreturn-type]
   97 | }
      | ^
src/general/nvbs_utilities.cpp: At global scope:
src/general/nvbs_utilities.cpp:135:5: warning: default argument given for parameter 7 of 'int random_ncVBS(ncVBS&, intT, intT, intT, float, float, int, int, float)' [-fpermissive]
  135 | int random_ncVBS(ncVBS& vbmat, intT mat_rows, intT mat_cols, intT block_size, float mat_density, float row_density, int mode = 0, int block_variation = 0, float density_variation = 0)
      |     ^~~~~~~~~~~~
In file included from src/general/nvbs_utilities.cpp:17:
include/nvbs_utilities.h:9:5: note: previous specification in 'int random_ncVBS(ncVBS&, intT, intT, intT, float, float, int, int, float)' here
    9 | int random_ncVBS(ncVBS& vbmat, intT mat_rows, intT mat_cols, intT block_size, float mat_density, float row_density, int mode = 0, int block_variation = 0, float density_variation = 0);
      |     ^~~~~~~~~~~~
src/general/nvbs_utilities.cpp:135:5: warning: default argument given for parameter 8 of 'int random_ncVBS(ncVBS&, intT, intT, intT, float, float, int, int, float)' [-fpermissive]
  135 | int random_ncVBS(ncVBS& vbmat, intT mat_rows, intT mat_cols, intT block_size, float mat_density, float row_density, int mode = 0, int block_variation = 0, float density_variation = 0)
      |     ^~~~~~~~~~~~
In file included from src/general/nvbs_utilities.cpp:17:
include/nvbs_utilities.h:9:5: note: previous specification in 'int random_ncVBS(ncVBS&, intT, intT, intT, float, float, int, int, float)' here
    9 | int random_ncVBS(ncVBS& vbmat, intT mat_rows, intT mat_cols, intT block_size, float mat_density, float row_density, int mode = 0, int block_variation = 0, float density_variation = 0);
      |     ^~~~~~~~~~~~
src/general/nvbs_utilities.cpp:135:5: warning: default argument given for parameter 9 of 'int random_ncVBS(ncVBS&, intT, intT, intT, float, float, int, int, float)' [-fpermissive]
  135 | int random_ncVBS(ncVBS& vbmat, intT mat_rows, intT mat_cols, intT block_size, float mat_density, float row_density, int mode = 0, int block_variation = 0, float density_variation = 0)
      |     ^~~~~~~~~~~~
In file included from src/general/nvbs_utilities.cpp:17:
include/nvbs_utilities.h:9:5: note: previous specification in 'int random_ncVBS(ncVBS&, intT, intT, intT, float, float, int, int, float)' here
    9 | int random_ncVBS(ncVBS& vbmat, intT mat_rows, intT mat_cols, intT block_size, float mat_density, float row_density, int mode = 0, int block_variation = 0, float density_variation = 0);
      |     ^~~~~~~~~~~~
src/general/nvbs_utilities.cpp: In function 'int multiply(DataT*, intT, intT, int, intT, DataT*, intT, int, intT, DataT*, intT, int)':
src/general/nvbs_utilities.cpp:426:1: warning: no return statement in function returning non-void [-Wreturn-type]
  426 | }
      | ^
src/general/nvbs_utilities.cpp: In function 'int initialize_ncVBS(ncVBS&, intT, intT, intT*)':
src/general/nvbs_utilities.cpp:63:1: warning: control reaches end of non-void function [-Wreturn-type]
   63 | }
      | ^
src/general/nvbs_utilities.cpp: In function 'int convert_to_ncVBS(const CSR&, ncVBS&, intT, intT*)':
src/general/nvbs_utilities.cpp:364:1: warning: control reaches end of non-void function [-Wreturn-type]
  364 | }
      | ^
src/general/reorderings.cpp: In function 'int assign_group(intT*, intT*, intT*, intT, intT, intT)':
src/general/reorderings.cpp:616:1: warning: no return statement in function returning non-void [-Wreturn-type]
  616 | }
      | ^
src/general/reorderings.cpp: In function 'int saad_reordering(CSR&, reorder_parameters&, intT*)':
src/general/reorderings.cpp:664:1: warning: no return statement in function returning non-void [-Wreturn-type]
  664 | }
      | ^
src/general/reorderings.cpp: In function 'int grp_to_partition(intT*, intT, intT*)':
src/general/reorderings.cpp:67:1: warning: control reaches end of non-void function [-Wreturn-type]
   67 | }
      | ^
src/general/reorderings.cpp: In function 'int hash_permute(CSR&, intT*, intT*, intT*, int)':
src/general/reorderings.cpp:134:1: warning: control reaches end of non-void function [-Wreturn-type]
  134 | }
      | ^
src/general/reorderings.cpp: In function 'int angle_method(CSR&, float, intT*, intT, intT*, intT*, intT*, int)':
src/general/reorderings.cpp:448:1: warning: control reaches end of non-void function [-Wreturn-type]
  448 | }
      | ^
src/general/reorderings.cpp: In function 'int angle_hash_method(CSR&, float, intT*, intT, VBS&, int, int, int)':
src/general/reorderings.cpp:519:1: warning: control reaches end of non-void function [-Wreturn-type]
  519 | }
      | ^
src/general/reorderings.cpp: In function 'int hash_reordering(CSR&, intT*, reorder_parameters&)':
src/general/reorderings.cpp:604:1: warning: control reaches end of non-void function [-Wreturn-type]
  604 | }
      | ^
src/general/reorderings.cpp: In function 'int group_to_VBS(CSR&, intT*, intT*, intT, VBS&, int, int)':
src/general/reorderings.cpp:794:1: warning: control reaches end of non-void function [-Wreturn-type]
  794 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int random_mat(DataT*, intT, intT, float)':
src/general/sparse_utilities.cpp:70:1: warning: no return statement in function returning non-void [-Wreturn-type]
   70 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int matprint(DataT*, intT, intT, intT, int)':
src/general/sparse_utilities.cpp:220:1: warning: no return statement in function returning non-void [-Wreturn-type]
  220 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int matprint(DataT*, intT, intT*, intT, intT, intT*, intT, intT, int)':
src/general/sparse_utilities.cpp:248:1: warning: no return statement in function returning non-void [-Wreturn-type]
  248 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int arr_print(intT*, intT)':
src/general/sparse_utilities.cpp:257:1: warning: no return statement in function returning non-void [-Wreturn-type]
  257 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int sort_permutation(intT*, intT*, intT)':
src/general/sparse_utilities.cpp:278:1: warning: no return statement in function returning non-void [-Wreturn-type]
  278 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int randperm(intT*, intT)':
src/general/sparse_utilities.cpp:305:1: warning: no return statement in function returning non-void [-Wreturn-type]
  305 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int random_sparse_blocks_mat(DataT*, intT, intT, int, intT, float, float)':
src/general/sparse_utilities.cpp:125:1: warning: control reaches end of non-void function [-Wreturn-type]
  125 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int random_sparse_blocks_mat(VBS&, intT, intT, int, int, intT, intT, float, float)':
src/general/sparse_utilities.cpp:206:1: warning: control reaches end of non-void function [-Wreturn-type]
  206 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int partition(intT*, intT, intT, intT)':
src/general/sparse_utilities.cpp:296:1: warning: control reaches end of non-void function [-Wreturn-type]
  296 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int init_VBS(VBS&, intT, intT*, intT, intT*, int, int)':
src/general/sparse_utilities.cpp:363:1: warning: control reaches end of non-void function [-Wreturn-type]
  363 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int matprint(const VBS&)':
src/general/sparse_utilities.cpp:788:1: warning: control reaches end of non-void function [-Wreturn-type]
  788 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int matprint(const CSR&)':
src/general/sparse_utilities.cpp:983:1: warning: control reaches end of non-void function [-Wreturn-type]
  983 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int copy(const CSR&, CSR&)':
src/general/sparse_utilities.cpp:1010:1: warning: control reaches end of non-void function [-Wreturn-type]
 1010 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int transpose(const CSR&, CSR&, int)':
src/general/sparse_utilities.cpp:1073:1: warning: control reaches end of non-void function [-Wreturn-type]
 1073 | }
      | ^
src/general/sparse_utilities.cpp: In function 'int permute_CSR(CSR&, intT*, int)':
src/general/sparse_utilities.cpp:1151:1: warning: control reaches end of non-void function [-Wreturn-type]
 1151 | }
      | ^
test/cuda/test_cublas_cusparse_comparison.cpp: In function 'float std_dev(vec_d)':
test/cuda/test_cublas_cusparse_comparison.cpp:57:1: warning: no return statement in function returning non-void [-Wreturn-type]
   57 | }
      | ^
test/cuda/test_cublas_cusparse_comparison.cpp: In function 'int output_couple(std::string&, std::string&, std::string, myType)':
test/cuda/test_cublas_cusparse_comparison.cpp:68:1: warning: no return statement in function returning non-void [-Wreturn-type]
   68 | }
      | ^
test/cuda/test_cublas_cusparse_comparison.cpp: In function 'int main(int, char**)':
test/cuda/test_cublas_cusparse_comparison.cpp:138:7: error: invalid conversion from 'const char*' to 'int' [-fpermissive]
  138 |  case "S": //random seed
      |       ^~~
      |       |
      |       const char*
test/cuda/test_cublas_cusparse_comparison.cpp:138:7: error: '(int)((const char*)"S")' is not a constant expression
test/cuda/test_cublas_cusparse_comparison.cpp:256:61: error: 'algo' was not declared in this scope
  256 |     output_couple(output_names, output_values, "Algorithm", algo);
      |                                                             ^~~~
make: *** [obj/cuda/test_cublas_cusparse_comparison.o] Error 1
/var/lib/slurm-llnl/slurmd/job55490/slurm_script: line 22: ./home/clusterusers/pasyloslabini/SPARTA/script/cusparse-vs-gemm-test.sh: No such file or directory
